fix: hide sidebar elements when collapsed
display: none added to headers and anchors that are the direct children of list items so that the do not appear when left sidebar is collapsed, and so that they cannot be tabbed through while left sidebar is collapsed

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -14826,7 +14826,7 @@ aside.left-sidebar[data-state=collapsed] {
 aside.left-sidebar[data-state=collapsed]::-webkit-scrollbar {
   display: none;
 }
-aside.left-sidebar[data-state=collapsed] div {
+aside.left-sidebar[data-state=collapsed] div, aside.left-sidebar[data-state=collapsed] h2, aside.left-sidebar[data-state=collapsed] h3, aside.left-sidebar[data-state=collapsed] h4, aside.left-sidebar[data-state=collapsed] li > a {
   display: none;
 }
 aside.left-sidebar[data-state=collapsed] div.toc-controls {
