--- a/regulations/static/regulations/css/scss/partials/_sidebar_left.scss
+++ b/regulations/static/regulations/css/scss/partials/_sidebar_left.scss
@@ -32,7 +32,7 @@ aside.left-sidebar {
             display: none;
         }
 
-        div {
+        div, h2, h3, h4, li > a {
             display: none;
         }
 
